--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,19 @@
+/* import */
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800');
 
+/* variables */
 
 :root {
     --color-black: #000000;
     --color-white: #ffffff;
     --color-primary: #14213d;
-    --color-secondary: #fca311;
+    --color-secondary: #471ca8;
     --color-tertiary: #e5e5e5;
 }
-
 * { 
     font-family: 'Montserrat', sans-serif;
 }
-
 body {
     background-color: var(--color-primary);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230a111e'/%3E%3Cstop offset='1' stop-color='%230a111e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230a111e'/%3E%3Cstop offset='1' stop-color='%230a111e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2314213D'/%3E%3Cstop offset='1' stop-color='%2314213D' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
@@ -48,7 +49,6 @@ body::-webkit-scrollbar-thumb {
     -webkit-transition: 0.5s;
     transition: 0.5s;
 }
-  
 .transition-slide.is-active {
     left: 0;
 }
@@ -76,8 +76,12 @@ nav .contact {
 nav .contact a {
     margin: 0 0.3em;
 }
+nav .contact svg {
+    transition: all 0.2s ease 0s;
+}
 nav .contact svg:hover {
     scale: 1.1;
+    transition: all 0.2s ease 0s;
 }
 nav .back {
     display: flex;
@@ -198,12 +202,14 @@ nav .language a:hover {
     margin-bottom: 0.5em;
 }
 
-
 /* mobile */
 
 @media screen and (max-width: 992px) {
     nav h1 {
         font-size: 3em;
+    }
+    nav .title {
+        padding: 0 0 0 1em;
     }
     nav .contact {
         padding: 1em 2em;
@@ -237,7 +243,8 @@ nav .language a:hover {
     }
     .button-container button {
         font-size: 2em;
-        width: 400px;
+        width: 600px;
+        height: 80px;
         margin: 0.3em;
     }
     .projects-content {
