--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,3 @@
-/* import */
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800');
-
 /* variables */
 
 :root {
@@ -10,9 +6,10 @@
     --color-primary: #14213d;
     --color-secondary: #471ca8;
     --color-tertiary: #e5e5e5;
+    --color-quaternary: #4579e7;
 }
 * { 
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Helvetica neue', sans-serif;
 }
 body {
     background-color: var(--color-primary);
@@ -104,6 +101,9 @@ nav .language a {
 nav .language a:hover {
     text-decoration: underline;
 }
+nav .logo img {
+    width: 30px;
+}
 
 /* hero container */
 
@@ -135,25 +135,29 @@ nav .language a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .hero-content button {
-    border: 1px solid var(--color-black);
-	background-color: var(--color-secondary);
+    border: 1px solid var(--color-secondary);
+	background-color: var(--color-quaternary);
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230a111e'/%3E%3Cstop offset='1' stop-color='%230a111e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230a111e'/%3E%3Cstop offset='1' stop-color='%230a111e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2314213D'/%3E%3Cstop offset='1' stop-color='%2314213D' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-size: cover;
 	color: var(--color-white);
-    width: 250px;
+    width: 300px;
     border-radius: 20px;
 	font-size: 18px;
 	font-weight: bold;
 	padding: 12px 45px;
-    margin: 0 0.5em;
+    margin: 0.5em;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
     transition: all 0.3s ease 0s;
 }
 .hero-content button:hover {
-	background-color: var(--color-tertiary);
-    color: var(--color-black);
+	background-color: var(--color-quaternary);
+    color: var(--color-white);
     transition: all 0.3s ease 0s;
 }
 .hero-content button:active {
@@ -185,21 +189,94 @@ nav .language a:hover {
     padding: 1em;
 }
 .projects-content {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 1em;
-    width: 70%;
-    border: solid 1px var(--color-tertiary);
-    border-radius: 20px;
-    opacity: 0.8;
+    align-items: center;
+    margin-bottom: 1em;
 }
-.projects-content h2 {
-    font-size: 2em;
+
+/* about */
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 1em;
+}
+.about-content {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+    border: 1px solid var(--color-secondary);
+    border-radius: 20px;
     color: var(--color-white);
+    padding: 2em;
+}
+.about-content h2 {
+    font-size: 2em;
+    font-weight: 500;
+    margin-bottom: 1em;
+}
+.about-content a {
+    color: var(--color-secondary);
+}
+
+/* accordion */
+
+.accordion {
+    color: var(--color-white);
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230a111e'/%3E%3Cstop offset='1' stop-color='%230a111e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230a111e'/%3E%3Cstop offset='1' stop-color='%230a111e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2314213D'/%3E%3Cstop offset='1' stop-color='%2314213D' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23000000'/%3E%3Cstop offset='1' stop-color='%23000000' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+    cursor: pointer;
+    padding: 18px;
+    width: 70%;
     text-align: left;
-    margin-bottom: 0.5em;
+    border: none;
+    outline: none;
+    font-size: 2em;
+    font-weight: 500;
+    border: solid 1px var(--color-secondary);
+    transition: all 0.3s ease 0s;
+}
+.active, .accordion:hover {
+    background-color: var(--color-quaternary);
+}
+.accordion:after {
+    color: var(--color-secondary);
+    content: '+';
+    font-size: 1.5em;
+    float: right;
+    margin-left: 5px;
+}
+.active:after {
+    content: "-";
+}
+.panel {
+    padding: 2em;
+    display: none;
+    overflow: hidden;
+    background-color: var(--color-tertiary);
+    width: 65%;
+    border-radius: 0 0 20px 20px;
+}
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+    flex-wrap: wrap;
+}
+.panel img {
+    width: 45%;
+    margin: 0.3em;
 }
 
 /* mobile */
@@ -249,5 +326,12 @@ nav .language a:hover {
     }
     .projects-content {
         width: 90%;
+    }
+    .accordion {
+        font-size: 1.5em;
+        width: 90%;
+    }
+    .panel {
+        width: 78%;
     }
 }
