--- a/style/style.css
+++ b/style/style.css
@@ -297,6 +297,9 @@ nav .logo img {
     nav .back {
         padding: 3em;
     }
+    nav .logo img {
+        width: 60px;
+    }
     .hero-container {
         flex-direction: column;
         justify-content: center;
@@ -328,10 +331,26 @@ nav .logo img {
         width: 90%;
     }
     .accordion {
-        font-size: 1.5em;
+        font-size: 2.5em;
         width: 90%;
     }
     .panel {
-        width: 78%;
+        width: 72%;
+        font-size: 2em;
+    }
+    .about-content {
+        width: 90%;
+        min-height: 85vh;
+    }
+    .about-content h2 {
+        font-size: 3em;
+    }
+    .about-content h3 {
+        font-size: 2.5em;
+    }
+    .about-content p {
+        font-size: 2em;
+        font-weight: 300;
+        line-height: 40px;
     }
 }
