--- a/style/style.css
+++ b/style/style.css
@@ -342,6 +342,9 @@ nav .logo img {
         width: 72%;
         font-size: 2em;
     }
+    .panel img {
+        width: 90%;
+    }
     .about-content {
         width: 90%;
         min-height: 85vh;
