--- a/style/style.css
+++ b/style/style.css
@@ -351,6 +351,8 @@ nav .logo img {
     }
     .panel p {
         font-size: 1em;
+        font-weight: 300;
+        line-height: 40px;
     }
     .panel img {
         width: 90%;
