--- a/style/style.css
+++ b/style/style.css
@@ -183,6 +183,40 @@ nav .logo img {
     transition: all 0.3s ease 0s;
 }
 
+/* skills */
+
+.skills-container {
+    display: flex;
+    justify-content: space-around;
+    padding: 1em;
+}
+.skills-content {
+    width: 27%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1em;
+    border: 1px solid var(--color-secondary);
+    border-radius: 20px;
+    color: var(--color-white);
+    padding: 2em;
+}
+.skills-content div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.skills-content h2 {
+    font-size: 2em;
+    margin-bottom: 1em;
+}
+.skills-content p {
+    background-color: var(--color-secondary);
+    border-radius: 20px;
+    padding: 0.3em 0.5em;
+    margin: 0.5em;
+}
+
 /* projects */
 
 .projects-container {
@@ -368,6 +402,21 @@ nav .logo img {
         font-size: 2.5em;
     }
     .about-content p {
+        font-size: 2em;
+        font-weight: 300;
+        line-height: 40px;
+    }
+    .skills-container {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .skills-content {
+        width: 90%;
+    }
+    .skills-content h2 {
+        font-size: 3em;
+    }
+    .skills-content p {
         font-size: 2em;
         font-weight: 300;
         line-height: 40px;
