--- a/style/style.css
+++ b/style/style.css
@@ -189,9 +189,10 @@ nav .logo img {
     display: flex;
     justify-content: space-around;
     padding: 1em;
+    margin-top: 5em;
 }
 .skills-content {
-    width: 27%;
+    width: 18%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -209,6 +210,7 @@ nav .logo img {
 .skills-content h2 {
     font-size: 2em;
     margin-bottom: 1em;
+    text-align: center;
 }
 .skills-content p {
     background-color: var(--color-secondary);
@@ -225,6 +227,7 @@ nav .logo img {
     justify-content: center;
     align-items: center;
     padding: 1em;
+    margin-top: 5em;
 }
 .projects-content {
     width: 100%;
@@ -243,6 +246,7 @@ nav .logo img {
     justify-content: center;
     align-items: center;
     padding: 1em;
+    margin-top: 5em;
 }
 .about-content {
     width: 70%;
@@ -260,6 +264,9 @@ nav .logo img {
     font-size: 2em;
     font-weight: 500;
     margin-bottom: 1em;
+}
+.about-content h3 {
+    font-size: 1.5em;
 }
 .links {
     color: var(--color-quaternary);
@@ -349,6 +356,7 @@ nav .logo img {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: 5em;
     }
     .hero-content {
         width: 100%;
@@ -393,7 +401,7 @@ nav .logo img {
     }
     .about-content {
         width: 90%;
-        min-height: 85vh;
+        min-height: 80vh;
     }
     .about-content h2 {
         font-size: 3em;
@@ -409,6 +417,7 @@ nav .logo img {
     .skills-container {
         flex-direction: column;
         justify-content: center;
+        align-items: center;
     }
     .skills-content {
         width: 90%;
