--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@
 }
 * { 
     font-family: 'Helvetica neue', sans-serif;
+    scroll-behavior: smooth;
 }
 body {
     background-color: var(--color-primary);
@@ -57,6 +58,19 @@ body::-webkit-scrollbar-thumb {
 }
 .transition-slide.is-active {
     left: 0;
+}
+
+/* scroll up*/ 
+
+.scrollUp {
+    position: fixed;
+    bottom: 30px;
+    right: 40px;
+    transition: all 0.2s ease 0s;
+}
+.scrollUp:hover {
+    transform: translateY(-5px);
+    transition: all 0.2s ease 0s;
 }
 
 /* nav */
